Se agrega notebook de IQL y se adapta el agente iql para que funcione con la notebook

--- a/Simultaneous_Games/Foraging.ipynb
+++ b/Simultaneous_Games/Foraging.ipynb
@@ -7,27 +7,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !pip install lbforaging"
+    "#!pip install lbforaging"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "7d249b5d",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'lbforaging'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mlbforaging\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mgames\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mforaging\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Foraging \n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnumpy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnp\u001b[39;00m\n",
-      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'lbforaging'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import lbforaging\n",
     "from games.foraging import Foraging \n",
@@ -43,7 +31,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "game = Foraging(config=None)"
+    "game = Foraging(config=None, seed=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a53da2c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "game.reset()\n",
+    "for agent in game.agents:\n",
+    "    print(f\"Agent {agent}\")\n",
+    "    print(f\"Observed state: {game.observe(agent)}\")\n",
+    "    print(f\"Observed actions: {game.observe_action(agent)}\")"
    ]
   },
   {
@@ -53,10 +55,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def run(game, agents, verbose=False, render=False):\n",
+    "def play_episode(game, agents, verbose=False, render=False):\n",
     "\n",
     "    # Initialize the game\n",
     "    game.reset()\n",
+    "\n",
+    "    # Print initial observations\n",
+    "    if verbose:\n",
+    "        print(f\"Step: {game.env.current_step}\")\n",
+    "        for agent in game.agents:\n",
+    "            print(f\"Agent {agent}: {game.observe(agent)}\")\n",
     "\n",
     "    # Initialize rewards for each agent\n",
     "    cum_rewards = dict(map(lambda agent: (agent, 0), game.agents))\n",
@@ -80,10 +88,13 @@
     "\n",
     "        # Print the rewards if verbose is enabled\n",
     "        if verbose:\n",
+    "            print(f\"Step: {game.env.current_step}\")\n",
     "            for agent in game.agents:\n",
-    "                    print(f\"Agent {agent} reward: {game.reward(agent)}\")\n",
-    "                    print(f\"Agent {agent} observe: {game.observe(agent)}\")\n",
-    "            \n",
+    "                print(f\"Agent {agent} action: {actions[agent]} ({game.action_set[actions[agent]]})\")\n",
+    "                print(f\"Agent {agent} reward: {game.reward(agent)}\")\n",
+    "                print(f\"Agent {agent} next state: {game.observe(agent)}\")\n",
+    "                print(f\"Agent {agent} joint action: {game.observe_action(agent)}\")\n",
+    "        \n",
     "        if render:\n",
     "            game.render()\n",
     "            time.sleep(0.5)\n",
@@ -98,7 +109,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fgagents = dict(map(lambda agent: (agent, RandomAgent(game=game, agent=agent)), game.agents))"
+    "agent_dict = dict(map(lambda agent: (agent, RandomAgent(game=game, agent=agent)), game.agents))"
    ]
   },
   {
@@ -108,7 +119,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "run(game, fgagents, verbose=True, render=True)"
+    "def run(game, agent_dict, n_episodes=100, verbose=False, render=False):\n",
+    "    total_rewards = dict(map(lambda agent: (agent, 0), game.agents))\n",
+    "    for episode in range(n_episodes):\n",
+    "        if verbose:\n",
+    "            print(f\"-- Episode: {episode}\")\n",
+    "        cum_rewards = play_episode(game, agent_dict, verbose=verbose, render=render)\n",
+    "        for agent in game.agents:\n",
+    "            total_rewards[agent] += cum_rewards[agent]\n",
+    "        if verbose:\n",
+    "            for agent in game.agents:\n",
+    "                print(f\"Total rewards {agent}: {total_rewards[agent]}\")\n",
+    "            print(\"--\")\n",
+    "    return total_rewards"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ec47912",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "run(game=game, agent_dict=agent_dict, n_episodes=1, verbose=True, render=False)"
    ]
   }
  ],
