--- a/Simultaneous_Games/RM.ipynb
+++ b/Simultaneous_Games/RM.ipynb
@@ -34,22 +34,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "UFuncTypeError",
-     "evalue": "Cannot cast ufunc 'add' output from dtype('O') to dtype('float64') with casting rule 'same_kind'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mUFuncTypeError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[32m10000\u001b[39m):\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m     actions = \u001b[38;5;28;43mdict\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mmap\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43;01mlambda\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43magent\u001b[49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43m(\u001b[49m\u001b[43magent\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrm\u001b[49m\u001b[43m[\u001b[49m\u001b[43magent\u001b[49m\u001b[43m]\u001b[49m\u001b[43m.\u001b[49m\u001b[43maction\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mg\u001b[49m\u001b[43m.\u001b[49m\u001b[43magents\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      3\u001b[39m     g.step(actions)\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 2\u001b[39m, in \u001b[36m<lambda>\u001b[39m\u001b[34m(agent)\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[32m10000\u001b[39m):\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m     actions = \u001b[38;5;28mdict\u001b[39m(\u001b[38;5;28mmap\u001b[39m(\u001b[38;5;28;01mlambda\u001b[39;00m agent: (agent, \u001b[43mrm\u001b[49m\u001b[43m[\u001b[49m\u001b[43magent\u001b[49m\u001b[43m]\u001b[49m\u001b[43m.\u001b[49m\u001b[43maction\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m), g.agents))\n\u001b[32m      3\u001b[39m     g.step(actions)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\landr\\MasterIA\\multiagentes\\Simultaneous_Games\\agents\\regretmatching.py:47\u001b[39m, in \u001b[36mRegretMatching.action\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m     46\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34maction\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[32m---> \u001b[39m\u001b[32m47\u001b[39m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mupdate\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     48\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m np.argmax(np.random.multinomial(\u001b[32m1\u001b[39m, \u001b[38;5;28mself\u001b[39m.curr_policy, size=\u001b[32m1\u001b[39m))\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\landr\\MasterIA\\multiagentes\\Simultaneous_Games\\agents\\regretmatching.py:41\u001b[39m, in \u001b[36mRegretMatching.update\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m     39\u001b[39m    \u001b[38;5;28;01mreturn\u001b[39;00m\n\u001b[32m     40\u001b[39m regrets = \u001b[38;5;28mself\u001b[39m.regrets(actions)\n\u001b[32m---> \u001b[39m\u001b[32m41\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mcum_regrets\u001b[49m\u001b[43m \u001b[49m\u001b[43m+\u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[43mregrets\u001b[49m\n\u001b[32m     42\u001b[39m \u001b[38;5;28mself\u001b[39m.regret_matching()\n\u001b[32m     43\u001b[39m \u001b[38;5;28mself\u001b[39m.niter += \u001b[32m1\u001b[39m\n",
-      "\u001b[31mUFuncTypeError\u001b[39m: Cannot cast ufunc 'add' output from dtype('O') to dtype('float64') with casting rule 'same_kind'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for i in range(10000):\n",
     "    actions = dict(map(lambda agent: (agent, rm[agent].action()), g.agents))\n",
@@ -64,7 +49,7 @@
     {
      "data": {
       "text/plain": [
-       "{'agent_0': array([0.5, 0.5]), 'agent_1': array([0.5, 0.5])}"
+       "{'agent_0': array([0.503 , 0.4969]), 'agent_1': array([0.49785, 0.50205])}"
       ]
      },
      "execution_count": 5,
@@ -79,7 +64,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pettingzoo",
+   "display_name": "pettingzoo_games",
    "language": "python",
    "name": "python3"
   },
