--- a/Simultaneous_Games/Test.ipynb
+++ b/Simultaneous_Games/Test.ipynb
@@ -54,26 +54,308 @@
       "Play 0\n",
       "agent_0 T -1.0\n",
       "agent_1 H 1.0\n",
-      "2\n",
-      "<class 'numpy.int64'>\n"
-     ]
-    },
-    {
-     "ename": "UFuncTypeError",
-     "evalue": "Cannot cast ufunc 'add' output from dtype('O') to dtype('float64') with casting rule 'same_kind'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mUFuncTypeError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[32m10\u001b[39m):\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m     action_0 = \u001b[43magent_0\u001b[49m\u001b[43m.\u001b[49m\u001b[43maction\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      3\u001b[39m     action_1 = agent_1.action()\n\u001b[32m      4\u001b[39m     actions = {agent_0.agent: action_0, agent_1.agent: action_1}\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\landr\\MasterIA\\multiagentes\\Simultaneous_Games\\agents\\regretmatching.py:70\u001b[39m, in \u001b[36mRegretMatching.action\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m     69\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34maction\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[32m---> \u001b[39m\u001b[32m70\u001b[39m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mupdate\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     71\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m np.argmax(np.random.multinomial(\u001b[32m1\u001b[39m, \u001b[38;5;28mself\u001b[39m.curr_policy, size=\u001b[32m1\u001b[39m))\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\landr\\MasterIA\\multiagentes\\Simultaneous_Games\\agents\\regretmatching.py:64\u001b[39m, in \u001b[36mRegretMatching.update\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m     62\u001b[39m    \u001b[38;5;28;01mreturn\u001b[39;00m\n\u001b[32m     63\u001b[39m regrets = \u001b[38;5;28mself\u001b[39m.regrets(actions)\n\u001b[32m---> \u001b[39m\u001b[32m64\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mcum_regrets\u001b[49m\u001b[43m \u001b[49m\u001b[43m+\u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[43mregrets\u001b[49m\n\u001b[32m     65\u001b[39m \u001b[38;5;28mself\u001b[39m.regret_matching()\n\u001b[32m     66\u001b[39m \u001b[38;5;28mself\u001b[39m.niter += \u001b[32m1\u001b[39m\n",
-      "\u001b[31mUFuncTypeError\u001b[39m: Cannot cast ufunc 'add' output from dtype('O') to dtype('float64') with casting rule 'same_kind'"
+      "Play 1\n",
+      "agent_0 H 1.0\n",
+      "agent_1 H -1.0\n",
+      "Play 2\n",
+      "agent_0 T -1.0\n",
+      "agent_1 H 1.0\n",
+      "Play 3\n",
+      "agent_0 H -1.0\n",
+      "agent_1 T 1.0\n",
+      "Play 4\n",
+      "agent_0 T -1.0\n",
+      "agent_1 H 1.0\n",
+      "Play 5\n",
+      "agent_0 H -1.0\n",
+      "agent_1 T 1.0\n",
+      "Play 6\n",
+      "agent_0 T 1.0\n",
+      "agent_1 T -1.0\n",
+      "Play 7\n",
+      "agent_0 T 1.0\n",
+      "agent_1 T -1.0\n",
+      "Play 8\n",
+      "agent_0 T 1.0\n",
+      "agent_1 T -1.0\n",
+      "Play 9\n",
+      "agent_0 H 1.0\n",
+      "agent_1 H -1.0\n",
+      "Play 10\n",
+      "agent_0 H 1.0\n",
+      "agent_1 H -1.0\n",
+      "Play 11\n",
+      "agent_0 H 1.0\n",
+      "agent_1 H -1.0\n",
+      "Play 12\n",
+      "agent_0 T -1.0\n",
+      "agent_1 H 1.0\n",
+      "Play 13\n",
+      "agent_0 H -1.0\n",
+      "agent_1 T 1.0\n",
+      "Play 14\n",
+      "agent_0 T -1.0\n",
+      "agent_1 H 1.0\n",
+      "Play 15\n",
+      "agent_0 H 1.0\n",
+      "agent_1 H -1.0\n",
+      "Play 16\n",
+      "agent_0 T -1.0\n",
+      "agent_1 H 1.0\n",
+      "Play 17\n",
+      "agent_0 H -1.0\n",
+      "agent_1 T 1.0\n",
+      "Play 18\n",
+      "agent_0 T -1.0\n",
+      "agent_1 H 1.0\n",
+      "Play 19\n",
+      "agent_0 H 1.0\n",
+      "agent_1 H -1.0\n",
+      "Play 20\n",
+      "agent_0 H -1.0\n",
+      "agent_1 T 1.0\n",
+      "Play 21\n",
+      "agent_0 T -1.0\n",
+      "agent_1 H 1.0\n",
+      "Play 22\n",
+      "agent_0 H -1.0\n",
+      "agent_1 T 1.0\n",
+      "Play 23\n",
+      "agent_0 T 1.0\n",
+      "agent_1 T -1.0\n",
+      "Play 24\n",
+      "agent_0 H 1.0\n",
+      "agent_1 H -1.0\n",
+      "Play 25\n",
+      "agent_0 H 1.0\n",
+      "agent_1 H -1.0\n",
+      "Play 26\n",
+      "agent_0 T 1.0\n",
+      "agent_1 T -1.0\n",
+      "Play 27\n",
+      "agent_0 H -1.0\n",
+      "agent_1 T 1.0\n",
+      "Play 28\n",
+      "agent_0 T 1.0\n",
+      "agent_1 T -1.0\n",
+      "Play 29\n",
+      "agent_0 T -1.0\n",
+      "agent_1 H 1.0\n",
+      "Play 30\n",
+      "agent_0 H 1.0\n",
+      "agent_1 H -1.0\n",
+      "Play 31\n",
+      "agent_0 T -1.0\n",
+      "agent_1 H 1.0\n",
+      "Play 32\n",
+      "agent_0 H -1.0\n",
+      "agent_1 T 1.0\n",
+      "Play 33\n",
+      "agent_0 T 1.0\n",
+      "agent_1 T -1.0\n",
+      "Play 34\n",
+      "agent_0 H -1.0\n",
+      "agent_1 T 1.0\n",
+      "Play 35\n",
+      "agent_0 T 1.0\n",
+      "agent_1 T -1.0\n",
+      "Play 36\n",
+      "agent_0 T -1.0\n",
+      "agent_1 H 1.0\n",
+      "Play 37\n",
+      "agent_0 H 1.0\n",
+      "agent_1 H -1.0\n",
+      "Play 38\n",
+      "agent_0 T 1.0\n",
+      "agent_1 T -1.0\n",
+      "Play 39\n",
+      "agent_0 T 1.0\n",
+      "agent_1 T -1.0\n",
+      "Play 40\n",
+      "agent_0 T -1.0\n",
+      "agent_1 H 1.0\n",
+      "Play 41\n",
+      "agent_0 H -1.0\n",
+      "agent_1 T 1.0\n",
+      "Play 42\n",
+      "agent_0 T 1.0\n",
+      "agent_1 T -1.0\n",
+      "Play 43\n",
+      "agent_0 T -1.0\n",
+      "agent_1 H 1.0\n",
+      "Play 44\n",
+      "agent_0 H 1.0\n",
+      "agent_1 H -1.0\n",
+      "Play 45\n",
+      "agent_0 H 1.0\n",
+      "agent_1 H -1.0\n",
+      "Play 46\n",
+      "agent_0 H 1.0\n",
+      "agent_1 H -1.0\n",
+      "Play 47\n",
+      "agent_0 T -1.0\n",
+      "agent_1 H 1.0\n",
+      "Play 48\n",
+      "agent_0 H -1.0\n",
+      "agent_1 T 1.0\n",
+      "Play 49\n",
+      "agent_0 T 1.0\n",
+      "agent_1 T -1.0\n",
+      "Play 50\n",
+      "agent_0 T -1.0\n",
+      "agent_1 H 1.0\n",
+      "Play 51\n",
+      "agent_0 H -1.0\n",
+      "agent_1 T 1.0\n",
+      "Play 52\n",
+      "agent_0 T 1.0\n",
+      "agent_1 T -1.0\n",
+      "Play 53\n",
+      "agent_0 T -1.0\n",
+      "agent_1 H 1.0\n",
+      "Play 54\n",
+      "agent_0 H -1.0\n",
+      "agent_1 T 1.0\n",
+      "Play 55\n",
+      "agent_0 T -1.0\n",
+      "agent_1 H 1.0\n",
+      "Play 56\n",
+      "agent_0 H -1.0\n",
+      "agent_1 T 1.0\n",
+      "Play 57\n",
+      "agent_0 T -1.0\n",
+      "agent_1 H 1.0\n",
+      "Play 58\n",
+      "agent_0 H -1.0\n",
+      "agent_1 T 1.0\n",
+      "Play 59\n",
+      "agent_0 T 1.0\n",
+      "agent_1 T -1.0\n",
+      "Play 60\n",
+      "agent_0 H 1.0\n",
+      "agent_1 H -1.0\n",
+      "Play 61\n",
+      "agent_0 H -1.0\n",
+      "agent_1 T 1.0\n",
+      "Play 62\n",
+      "agent_0 T -1.0\n",
+      "agent_1 H 1.0\n",
+      "Play 63\n",
+      "agent_0 H -1.0\n",
+      "agent_1 T 1.0\n",
+      "Play 64\n",
+      "agent_0 T -1.0\n",
+      "agent_1 H 1.0\n",
+      "Play 65\n",
+      "agent_0 H -1.0\n",
+      "agent_1 T 1.0\n",
+      "Play 66\n",
+      "agent_0 T 1.0\n",
+      "agent_1 T -1.0\n",
+      "Play 67\n",
+      "agent_0 H 1.0\n",
+      "agent_1 H -1.0\n",
+      "Play 68\n",
+      "agent_0 H 1.0\n",
+      "agent_1 H -1.0\n",
+      "Play 69\n",
+      "agent_0 H -1.0\n",
+      "agent_1 T 1.0\n",
+      "Play 70\n",
+      "agent_0 T -1.0\n",
+      "agent_1 H 1.0\n",
+      "Play 71\n",
+      "agent_0 H 1.0\n",
+      "agent_1 H -1.0\n",
+      "Play 72\n",
+      "agent_0 T -1.0\n",
+      "agent_1 H 1.0\n",
+      "Play 73\n",
+      "agent_0 H 1.0\n",
+      "agent_1 H -1.0\n",
+      "Play 74\n",
+      "agent_0 T -1.0\n",
+      "agent_1 H 1.0\n",
+      "Play 75\n",
+      "agent_0 H 1.0\n",
+      "agent_1 H -1.0\n",
+      "Play 76\n",
+      "agent_0 T -1.0\n",
+      "agent_1 H 1.0\n",
+      "Play 77\n",
+      "agent_0 H -1.0\n",
+      "agent_1 T 1.0\n",
+      "Play 78\n",
+      "agent_0 T 1.0\n",
+      "agent_1 T -1.0\n",
+      "Play 79\n",
+      "agent_0 T -1.0\n",
+      "agent_1 H 1.0\n",
+      "Play 80\n",
+      "agent_0 H 1.0\n",
+      "agent_1 H -1.0\n",
+      "Play 81\n",
+      "agent_0 H 1.0\n",
+      "agent_1 H -1.0\n",
+      "Play 82\n",
+      "agent_0 H -1.0\n",
+      "agent_1 T 1.0\n",
+      "Play 83\n",
+      "agent_0 T 1.0\n",
+      "agent_1 T -1.0\n",
+      "Play 84\n",
+      "agent_0 T -1.0\n",
+      "agent_1 H 1.0\n",
+      "Play 85\n",
+      "agent_0 H 1.0\n",
+      "agent_1 H -1.0\n",
+      "Play 86\n",
+      "agent_0 T -1.0\n",
+      "agent_1 H 1.0\n",
+      "Play 87\n",
+      "agent_0 H 1.0\n",
+      "agent_1 H -1.0\n",
+      "Play 88\n",
+      "agent_0 T -1.0\n",
+      "agent_1 H 1.0\n",
+      "Play 89\n",
+      "agent_0 H -1.0\n",
+      "agent_1 T 1.0\n",
+      "Play 90\n",
+      "agent_0 T -1.0\n",
+      "agent_1 H 1.0\n",
+      "Play 91\n",
+      "agent_0 H 1.0\n",
+      "agent_1 H -1.0\n",
+      "Play 92\n",
+      "agent_0 H 1.0\n",
+      "agent_1 H -1.0\n",
+      "Play 93\n",
+      "agent_0 H -1.0\n",
+      "agent_1 T 1.0\n",
+      "Play 94\n",
+      "agent_0 T -1.0\n",
+      "agent_1 H 1.0\n",
+      "Play 95\n",
+      "agent_0 H 1.0\n",
+      "agent_1 H -1.0\n",
+      "Play 96\n",
+      "agent_0 T 1.0\n",
+      "agent_1 T -1.0\n",
+      "Play 97\n",
+      "agent_0 H 1.0\n",
+      "agent_1 H -1.0\n",
+      "Play 98\n",
+      "agent_0 T -1.0\n",
+      "agent_1 H 1.0\n",
+      "Play 99\n",
+      "agent_0 H -1.0\n",
+      "agent_1 T 1.0\n"
      ]
     }
    ],
    "source": [
-    "for i in range(10):\n",
+    "for i in range(100):\n",
     "    action_0 = agent_0.action()\n",
     "    action_1 = agent_1.action()\n",
     "    actions = {agent_0.agent: action_0, agent_1.agent: action_1}\n",
@@ -85,7 +367,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pettingzoo",
+   "display_name": "pettingzoo_games",
    "language": "python",
    "name": "python3"
   },
